﻿HISTORY

  Version 7.0.0 2013-06-
  ------------------------------------------------------------------------------
    beta1:
    - GUI and command line tool reimplemented on top of wxWidgets library
    - initial language selection is now done by the GUI instead of the installer
    - internal GUI settings moved from guiopts-internals.lua to gui.ini file
    - Windows NT 4.0 and Windows 2000 support dropped due to poor API support
    - useless font selection dialog removed from GUI (adjust Windows theme instead)
    - scale_by_dpi GUI parameter removed, as well as disable_latest_version_check
      and restore_default_window_size parameters (examine guiopts.lua file for details)
    - Internals: Windows Driver Kit support dropped because of its
      unreliable development environment - use Windows SDK v7.1 instead
    - winx_vswprintf and winx_swprintf routines added to zenwinx library
    - wgx library replaced by wxWidgets library

                                    ***

  Version 6.0.2 2013-05-
  ------------------------------------------------------------------------------
    - the following translations were updated:

      Albanian, Danish, Filipino (Tagalog), Indonesian (Bahasa Indonesia),
      Javanese, Polish, Portuguese (BR)


  Version 6.0.1 2013-04-01
  ------------------------------------------------------------------------------
    - Installer no longer warns about Windows 8 being untested
    - shortened the delay after hitting the finish button of the installer
    - increased Windows 8 compatibility
    - the following translations were added:

      Armenian

    - the following translations were updated:

      Chinese (Traditional), Filipino (Tagalog), Italian, Portuguese, Spanish (AR),
      Ukrainian, Vietnamese


  Version 6.0.0 2013-03-02
  ------------------------------------------------------------------------------
    - the following translations were updated:

      Chinese (Traditional)

    RC3: